--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-md-block">
                   <div class="pb-5">
                     <h1>Get Started Digital <br> Learning</h1>
                     <p>It is a long established fact that a reader will be distracted by the readable content <br> of a page when looking at its layout.</p>
@@ -108,7 +108,7 @@
                 <div class="col-md-4">
                   <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-4">
                   <div class="card-body">
                     <h6 class="card-title fw-semibold">Fundamental Of UI/UX Design</h6>
                     <p class="card-text"><small>Some quick example text to build on the card title and make up the bulk of the card.</small></p>
@@ -122,7 +122,7 @@
                 <div class="col-md-4">
                   <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-4">
                   <div class="card-body">
                     <h6 class="card-title fw-semibold">Fullstack Web Development</h6>
                     <p class="card-text"><small>Some quick example text to build on the card title and make up the bulk of the card.</small></p>
@@ -136,7 +136,7 @@
                 <div class="col-md-4">
                   <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-4">
                   <div class="card-body">
                     <h6 class="card-title fw-semibold">Photography Basic Rules</h6>
                     <p class="card-text"><small>Some quick example text to build on the card title and make up the bulk of the card.</small></p>
@@ -152,7 +152,7 @@
                 <div class="col-md-4">
                   <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-4">
                   <div class="card-body">
                     <h6 class="card-title fw-semibold">Javascript Basic to advanced</h6>
                     <p class="card-text"><small>Some quick example text to build on the card title and make up the bulk of the card.</small></p>
@@ -166,7 +166,7 @@
                 <div class="col-md-4">
                   <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-4">
                   <div class="card-body">
                     <h6 class="card-title fw-semibold">Digital Marketing</h6>
                     <p class="card-text"><small>Some quick example text to build on the card title and make up the bulk of the card.</small></p>
@@ -180,7 +180,7 @@
                 <div class="col-md-4">
                   <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-4">
                   <div class="card-body">
                     <h6 class="card-title fw-semibold">Motion Graphics</h6>
                     <p class="card-text"><small>Some quick example text to build on the card title and make up the bulk of the card.</small></p>
@@ -192,16 +192,16 @@
           </div>
         </div>
         <div class="text-center">
-          <button class="btn btn-primary my-5">See More Courses</button>
+          <button class="btn btn-primary my-5">View All</button>
         </div>
       </section>
       <!-- courses section end -->
       <!-- explore section start -->
       <section class="container mb-5">
-        <div class="bg-success bg-opacity-10 rounded border">
-          <div class="row">
+        <div class="bg-success bg-opacity-10">
+          <div class="row grid">
             <div class="col-5">
-              <img class="img-fluid w-100" src="images/working.png" alt="...">
+              <img class="img-fluid" src="images/working.png" alt="...">
             </div>
             <div class="col-7 ps-5 pt-5">
               <h1 class="card-title">Explore The elearning <br> Institute</h1>
