--- a/index.html
+++ b/index.html
@@ -101,17 +101,17 @@
           <h1>Discover Our Popular <br> Courses</h1>
           <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
         </div>
-        <div class="d-flex gap-3">
+        <div class=" d-flex gap-3">
           <div>
             <div class="card mb-3" style="max-width: 540px;">
               <div class="row g-0">
                 <div class="col-md-4">
                   <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
                 </div>
-                <div class="col-md-4">
+                 <div class="col-md-8">
                   <div class="card-body">
                     <h6 class="card-title fw-semibold">Fundamental Of UI/UX Design</h6>
-                    <p class="card-text"><small>Some quick example text to build on the card title and make up the bulk of the card.</small></p>
+                      p class="card-text"><small>Some quick example text to build on the card title and make up the bulk of the card.</small></p>
                     <p class="card-text text-info"><small>Price : 20$</small></p>
                   </div>
                 </div>
@@ -122,7 +122,7 @@
                 <div class="col-md-4">
                   <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-8">
                   <div class="card-body">
                     <h6 class="card-title fw-semibold">Fullstack Web Development</h6>
                     <p class="card-text"><small>Some quick example text to build on the card title and make up the bulk of the card.</small></p>
@@ -136,7 +136,7 @@
                 <div class="col-md-4">
                   <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-8">
                   <div class="card-body">
                     <h6 class="card-title fw-semibold">Photography Basic Rules</h6>
                     <p class="card-text"><small>Some quick example text to build on the card title and make up the bulk of the card.</small></p>
@@ -152,7 +152,7 @@
                 <div class="col-md-4">
                   <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-8">
                   <div class="card-body">
                     <h6 class="card-title fw-semibold">Javascript Basic to advanced</h6>
                     <p class="card-text"><small>Some quick example text to build on the card title and make up the bulk of the card.</small></p>
@@ -166,7 +166,7 @@
                 <div class="col-md-4">
                   <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-8">
                   <div class="card-body">
                     <h6 class="card-title fw-semibold">Digital Marketing</h6>
                     <p class="card-text"><small>Some quick example text to build on the card title and make up the bulk of the card.</small></p>
@@ -180,7 +180,7 @@
                 <div class="col-md-4">
                   <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-8">
                   <div class="card-body">
                     <h6 class="card-title fw-semibold">Motion Graphics</h6>
                     <p class="card-text"><small>Some quick example text to build on the card title and make up the bulk of the card.</small></p>
@@ -198,12 +198,12 @@
       <!-- courses section end -->
       <!-- explore section start -->
       <section class="container mb-5">
-        <div class="bg-success bg-opacity-10">
-          <div class="row grid">
-            <div class="col-5">
+        <div class="bg-success bg-opacity-10 rounded">
+          <div class="row g-0">
+            <div class="col-md-5">
               <img class="img-fluid" src="images/working.png" alt="...">
             </div>
-            <div class="col-7 ps-5 pt-5">
+            <div class="col-md-7 ps-5 pt-5">
               <h1 class="card-title">Explore The elearning <br> Institute</h1>
               <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure.</p>
               <p>Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined.</p>
