--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               </div>
               <div class="carousel-item">
                 <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-md-block">
                   <div class="pb-5">
                     <h1>Get Started Digital <br> Learning</h1>
                     <p>It is a long established fact that a reader will be distracted by the readable content <br> of a page when looking at its layout.</p>
@@ -74,7 +74,7 @@
               </div>
               <div class="carousel-item">
                 <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-md-block">
                   <div class="pb-5">
                     <h1>Get Started Digital <br> Learning</h1>
                     <p>It is a long established fact that a reader will be distracted by the readable content <br> of a page when looking at its layout.</p>
@@ -101,7 +101,7 @@
           <h1>Discover Our Popular <br> Courses</h1>
           <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
         </div>
-        <div class=" d-flex gap-3">
+        <div class="d-flex gap-3">
           <div>
             <div class="card mb-3" style="max-width: 540px;">
               <div class="row g-0">
@@ -111,7 +111,7 @@
                  <div class="col-md-8">
                   <div class="card-body">
                     <h6 class="card-title fw-semibold">Fundamental Of UI/UX Design</h6>
-                      p class="card-text"><small>Some quick example text to build on the card title and make up the bulk of the card.</small></p>
+                      <p class="card-text"><small>Some quick example text to build on the card title and make up the bulk of the card.</small></p>
                     <p class="card-text text-info"><small>Price : 20$</small></p>
                   </div>
                 </div>
@@ -148,7 +148,7 @@
           </div>
           <div>
             <div class="card mb-3" style="max-width: 540px;">
-              <div class="row g-0">
+              <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-0">
                 <div class="col-md-4">
                   <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
                 </div>
