--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <p>It is a long established fact that a reader will be distracted by <br> the readable content of a page when looking at its layout.</p>
           </div>
           <div>
-            <button class="btn btn-light">Register Now</button>
+            <button class="btn btn-light text-decoration-none"><a class="text-decoration-none" href="form.html">Register Now</a></button>
           </div>
         </div>
       </section>
